content/corpstyle.css
.content {
  position: relative;
  width: auto;
  min-width: 120px;
  margin: 0 210px 20px 170px;
  border: 1px solid black;
  /*background-color: #66CCFF;*/
  /*problem with backgroung color body */
  padding: 10px;
  z-index: 3;
}
img {
   padding:1px;
   border:1px solid #021a40;
}
#nav-left {
  position: absolute;
  width: 128px;
  top: 20px;
  left: 20px;
  font-size: 0.938em;

  background-color: #ffffff;
  padding: 10px;
  z-index: 2;
}
#nav-left ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

#nav-right {
  position: absolute;
  width: 275px;
  top: 20px;
  right: 20px;
  border: none;
  background-color: #ffffff;
  padding: 10px;
  z-index: 1;
}

#nav-right div {
  display: none;
}

#nav-right div.visible {
  display: block;
}

#header div.pane {
  display: none
}

#header div.pane.visible {
  display: block;;
}

{
  font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
  font-size: 12px;
  color: #000000;
}
a:link { color: #0000FF; }
a:visited { color: #FF00FF; }
a:hover { color: #00CCFF; }
a:active { color: #FF0000; }

a:link, a:visited {
  text-decoration: underline;
  color: #6A5ACD;
  background-color: transparent;
}
a:hover, a:active {
  text-decoration: underline overline;
  color: #191970;
  background-color: #C9C3ED;
}

.layout-grid,
.photo-grid {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  list-style: none;
}

.layout-grid li,
.photo-grid li {
  padding: 10px;
}

#content, #header, #nav-bottom,
.content {
  margin: auto;
  text-align: center;
}

